--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "dev": "nodemon --env-file=.env src/server.js "
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.7.2",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
         "cors": "^2.8.5",
@@ -15,6 +16,7 @@
         "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.10.0",
+        "multer": "^1.4.5-lts.1",
         "winston": "^3.17.0"
     },
     "devDependencies": {
